--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,7 @@ flutter:
     - assets/
     - assets/logo/
     - assets/product/logo/
+    - assets/product/icon/
     - assets/drcv.pdf
     - assets/Brochure.pdf
     - assets/png/
